<resources>
    <string name="app_name">Proyecto_DAS</string>
    <string name="g_nero_drama">Género: Drama</string>
    <string name="mi_opini_n">Mi Opinión:</string>
    <string name="opinionTexto">Aquí va la opinión completa que escribió el usuario al registrar la película.</string>
    <string name="editar_pel_cula">Editar Película</string>
    <string name="compartir_opini_n">Compartir opinión</string>
    <string name="modificar_pel_cula">Modificar Película</string>
    <string name="toca_para_cambiar_imagen">Toca para cambiar imagen</string>
    <string name="t_tulo_de_la_pel_cula">Título de la película</string>
    <string name="g_nero_ej_terror_comedia">Género (Ej: Terror, Comedia...)</string>
    <string name="tu_valoraci_n">Tu valoración:</string>
    <string name="opini_n_cr_tica">Opinión / Crítica:</string>
    <string name="escribe_aqu_qu_te_ha_parecido">Escribe aquí qué te ha parecido...</string>
    <string name="guardar_cambios">GUARDAR CAMBIOS</string>
    <string name="cancelar">Cancelar</string>
    <string name="a_adir_pel_cula">Añadir película</string>
    <string name="acceder">Acceder</string>
    <string name="introduce_un_email">Introduce un email</string>
    <string name="introduce_una_contrase_a">Introduce una contraseña</string>
    <string name="registrate">Registrate</string>
    <string name="registrar">Registrar</string>
    <string name="introContra">Introduce una contraseña</string>
    <string name="introEmail">Introduce un email</string>
    <string name="annadir_pel_cula">Añadir Película</string>
    <string name="t_tulo">Título</string>
    <string name="a_o">Año</string>
    <string name="g_nero">Género</string>
    <string name="valoraci_n">Valoración:</string>
    <string name="tituloItem">Título</string>
    <string name="generoItem">Género</string>
    <string name="favorito">Favorito</string>
    <string name="titulo_borrar">¿Eliminar película?</string>
    <string name="msg_borrar">Esta acción no se puede deshacer.</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="msg_compartir_1">He visto esta película: </string>
    <string name="msg_compartir_2">\nEsto es lo que opino de ella: </string>
    <string name="titulo_chooser">Compartir peli con...</string>
    <string name="titulo_annadir">Introduce los datos de la película</string>
    <string name="btn_annadir">Añadir</string>
    <string name="btn_cancelarAnnadir">Cancelar</string>
    <string name="msg_permiso_denegado">Permiso denegado</string>
    <string name="msg_peli_borrada">Película eliminada</string>
    <string name="ajustes">Ajustes</string>
    <string name="ayuda">Ayuda</string>
    <string name="titulo_lista">Todas la películas</string>
    <string name="mensajeAyuda">Para añadir una película usa el botón +, para eliminar mantén pulsado sobre ella.</string>
    <string name="rellenaCampos">Rellena todos los campos</string>
    <string name="loginMal">Usuario o contraseña incorrectos</string>
    <string name="mis_pendientes">Mis Pendientes</string>
    <string name="existeUsuario">Ya existe un usuario con ese email</string>
    <string name="usuario_creado">Usuario creado</string>
    <string name="bienvenida">Bienvenido/a</string>
    <string name="mensajeBienvenida">Te has registrado correctamente. Disfruta de la aplicación.</string>
    <string name="mis_pel_culas">Mis Películas</string>
    <string name="configuraci_n_de_idioma">Configuración de Idioma</string>
    <string name="seleccionar_idioma">Seleccionar idioma</string>
    <string name="navegaci_n">Navegación</string>
    <string name="inicio">Inicio</string>
    <string name="mis_pendientes_watchlist">Mis Pendientes (WatchList)</string>
    <string name="configuraci_n">Configuración</string>
    <string name="marcar_como_pendiente">¿Pendiente de ver?</string>
    <string name="pendiente">Pendiente de Ver</string>
    <string name="recordatorio">¡Recuerda!</string>
    <string name="mensajeRecuerdo">Tienes algunas películas aún pendientes de ver</string>
    <string name="entendido">Entendido</string>
    <string name="hacer_foto">Hacer Foto</string>
    <string name="mi_ubi">Mi ubicación</string>
    <string name="recordatorioPeli">Recordatorio de Pelicula</string>
    <string name="recordatorioPeliMensaje">"¡Hora de ver "</string>
    <string name="aceptar">Aceptar</string>
    <string name="recordatorioSesion">Recordatorio de sesión</string>
    <string name="mensajeRecordatorio">¿Dentro de cuantos minutos quieres que se te avise?</string>
    <string name="avisoProgram">Aviso programado</string>
    <string name="avisoExacto">No tienes permiso para alarmas exactas</string>
    <string name="nuevoAmigo">Nuevo amigo</string>
    <string name="editarTelefono">Editar Teléfono</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Teléfono</string>
    <string name="guardar">Guardar</string>
    <string name="errorDetalle">Error al cargar detalle</string>
    <string name="permisoNo">Permiso denegado para leer contactos</string>
    <string name="cambiosGuardados">Cambios guardados</string>
    <string name="camaraPermiso">Permiso de cámara necesario</string>
    <string name="noUbicacion">No se pudo obtener la ubicación</string>
    <string name="btnRecordatorio">Poner Recordatorio</string>
    <string name="amigos_de_cine">Amigos de cine</string>
    <string name="mapa">Mapa</string>
</resources>