<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/colorSurface">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextoDAS.Titulo"
        android:text="@string/annadir_pel_cula"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/etTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/t_tulo"
        android:inputType="textCapSentences"
        android:textColor="@color/white"
        android:textColorHint="@color/gris"
        android:backgroundTint="@color/colorSecondary" />

    <EditText
        android:id="@+id/etAnno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/a_o"
        android:inputType="number"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gris"
        android:backgroundTint="@color/colorSecondary" />

    <EditText
        android:id="@+id/etGenero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/g_nero"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gris"
        android:backgroundTint="@color/colorSecondary" />

    <TextView
        style="@style/TextoDAS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valoraci_n"
        android:layout_marginTop="15dp" />

    <RatingBar
        android:id="@+id/rbValoracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="0.5" />

    <CheckBox
        android:id="@+id/cbPendiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/marcar_como_pendiente"
        android:textColor="@color/white"
        android:buttonTint="@color/colorSecondary" />

</LinearLayout>